--- a/сайт.css
+++ b/сайт.css
@@ -25,14 +25,12 @@ background: rgba(63, 142, 86, 0.6);
  p{
 
 
-font-family: Playfair Display;
-font-style: normal;
-font-weight: normal;
-font-size: 27px;
-line-height: 36px;
-
-
-color: #000000;
+	font-family: Playfair Display;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 27px;
+	line-height: 36px;
+	color: #000000;
  }
  img.img1{
 	 width: 373px;
@@ -119,7 +117,7 @@ background: rgba(51, 120, 70, 0.1);
 padding: 5%;
 }
 div.boll3{
-border: 4px double red; /* Параметры границы */	
+
 margin-top:6%;	 
 background: rgba(51, 120, 70, 0.1);
 padding: 5%;
@@ -134,7 +132,7 @@ width:100%;
 height: 65%;
 left: 5px;
 top: 76px;
-border: 4px double red; /* Параметры границы */
+
 }
 h2{
 	font-family: Playfair Display;
@@ -150,30 +148,102 @@ text-align: center;
 }	
 
 h2.z{
+	
 	margin-top:12%;
-	 margin-bottom: -15px; 
+	margin-bottom: -15px; 
 }
 div.pod{
 width: 100%;
 height: 25%;
-left: -14px;
-top: 4205px;
-
+top: 0%;
 background: rgba(89, 135, 102, 0.52);
 mix-blend-mode: normal;
-
+ border: 4px double black; 
 }
 div.zed{
 	background: rgba(0, 0, 0, 0.37);
 	
 }
 .v{
-top:0;
+
 display:block;
 text-align: left;
 float: left;
-margin-right: 48px;
-width: 114px;
-height: 59px;
-background: url(vk_com1600 1.png) no-repeat;
+width: 90.99px;
+height: 88px;
+left: 74px;
+background-image: url("vk_com1600 1.png");
+background-repeat: no-repeat;
+margin:1.5%;
+}
+.inst{ 
+width: 70px;
+height: 76px;
+background-image: url("62819-logo-computer-instagram-icons-free-frame 1.png");
+background-repeat: no-repeat;
+text-decoration: none;
+background-size: cover;
+text-align: center;
+
+}
+	#link {
+  display: block;
+width: 90.99px;
+height: 88px;
+
+background:url(../images/rgroup.png) no-repeat;
+
+}
+#link span {
+  display: block;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+
+}
+.menu{
+	background-image:url("b.png");
+	width:40px;
+	height:40px;
+	position:fixed;
+	background-repeat: no-repeat;
+	margin-top:0%;
+	
+}
+.men{
+	width:300px;
+	height:1000px;
+	display:none;
+	top:0px;
+	background-color: rgba(0, 0, 0, 0.37);
+	padding:2%;
+}
+div.menu:hover div.men{
+	display:block;
+
+}
+ul{
+	font-size: 27px;
+	margin-right:1%;
+
+}
+li{
+	  list-style-type: none;
+	  color: #ffffff;
+	  
+}
+.ul{
+	margin-left:5%;
+}
+
+}
+.gmail{
+height: 60px;
+float: left;
+
+}
+.name{
+height: 60px;
+float: left;
+
 }
